# edunetworks

./: .gitignore  CMakeLists.txt
project1/: CMakeLists.txt  clientbin.cpp  clienttxt.cpp  serverbin.cpp  servertxt.cpp
project2/: CMakeLists.txt
project2/A/: CMakeLists.txt  client.cpp  server.cpp
project2/B/: CMakeLists.txt  client.cpp  server.cpp
project3/: CMakeLists.txt  client.cpp  server.cpp
project4/: CMakeLists.txt  client.cpp  server.cpp
